-- fixed push daemon - microservice should be up to date and memory safe